# primwalk

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compileShaders.bat  msvcBuild.bat  resources.rc  settings.ini  unixBuild.sh  winBuild.bat
fzcoach/: CMakeLists.txt
fzcoach/src/: fzcoach.cpp  main.cpp
fzcoach/src/formats/: bc7decomp.cpp  bc7decomp.h  swatchbin.hpp
fzui/: CMakeLists.txt
fzui/include/fzui/: application.hpp  color.hpp  core.hpp  fzui.hpp  hitbox.hpp  mouse.hpp  mouseButtons.hpp  uiButton.hpp  uiContainer.hpp  uiElement.hpp  uiImage.hpp  uiImageButton.hpp  uiLabel.hpp  vertex.hpp  window.hpp
fzui/include/fzui/data/: font.hpp  fontManager.hpp  fontWeight.hpp  shader.hpp  texture.hpp
fzui/include/fzui/managers/: resourceManager.hpp
fzui/include/fzui/math/: math.hpp  vector2d.hpp
fzui/include/fzui/rendering/: buffer.hpp  bufferLayout.hpp  descriptorPool.hpp  descriptors.hpp  frameInfo.hpp  framebuffer.hpp  graphicsAPI.hpp  graphicsDevice.hpp  graphicsPipeline.hpp  image.hpp  indexBuffer.hpp  renderer.hpp  renderer2d.hpp  renderpass.hpp  texture2D.hpp  vertex.hpp  vertexArray.hpp  vertexBuffer.hpp
fzui/include/fzui/ui/: uiButton.hpp  uiContainer.hpp  uiElement.hpp  uiEvent.hpp  uiIconButton.hpp  uiLabel.hpp  uiSlider.hpp
fzui/include/fzui/windows/: color.hpp
fzui/src/common/: application.cpp  color.cpp  glad.c  mouse.cpp  shader.cpp  texture.cpp
fzui/src/common/data/: font.cpp  fontManager.cpp
fzui/src/common/fonts/: fontFace.cpp  fontManager.cpp
fzui/src/common/managers/: resourceManager.cpp
fzui/src/common/math/: hitbox.cpp  math.cpp
fzui/src/common/rendering/: buffer.cpp  descriptorPool.cpp  descriptors.cpp  framebuffer.cpp  graphicsDevice.cpp  graphicsPipeline.cpp  image.cpp  indexBuffer.cpp  renderer.cpp  renderer2d.cpp  renderpass.cpp  renderpass.hpp  texture2D.cpp  vertexArray.cpp  vertexBuffer.cpp
fzui/src/common/ui/: uiButton.cpp  uiContainer.cpp  uiElement.cpp  uiEvent.cpp  uiIconButton.cpp  uiImage.cpp  uiImageButton.cpp  uiLabel.cpp  uiSlider.cpp
fzui/src/fzui/: color.cpp  color.hpp  fzui.hpp  main.hpp  resource.hpp  resources.rc  utilities.cpp  utilities.hpp
fzui/src/fzui/ai/: auctionBot.cpp  auctionBot.hpp
fzui/src/fzui/core/: application.cpp  application.hpp  vertex.hpp  window.cpp  window.hpp
fzui/src/fzui/data/: shader.hpp  texture.cpp  texture.hpp
fzui/src/fzui/managers/: fontManager.cpp  fontManager.hpp
fzui/src/fzui/math/: vector2d.cpp  vector2d.hpp
fzui/src/fzui/rendering/: bufferLayout.cpp  bufferLayout.hpp  glad.c  indexBuffer.cpp  indexBuffer.hpp  renderer2d.cpp  renderer2d.hpp  vertexArray.cpp  vertexArray.hpp  vertexBuffer.cpp  vertexBuffer.hpp
fzui/src/fzui/ui/: uiButton.cpp  uiButton.hpp  uiElement.cpp  uiElement.hpp  uiStyle.hpp  win32ui.cpp  win32ui.hpp  windowInfo.cpp  windowInfo.hpp
fzui/src/fzui/win32/: win32Utilites.cpp  win32Utilities.hpp
fzui/src/macos/core/: window_osx.mm
fzui/src/macos/input/: mouse_osx.mm
fzui/src/windows/: color.cpp  glad.c  manifest.xml
fzui/src/windows/core/: application.cpp  window.cpp  window_win32.cpp
fzui/src/windows/data/: shader.cpp  texture.cpp
fzui/src/windows/input/: mouse_win32.cpp
fzui/src/windows/math/: math.cpp  vector2d.cpp
fzui/src/windows/rendering/: bufferLayout.cpp  indexBuffer.cpp  renderer2d.cpp  vertexArray.cpp  vertexBuffer.cpp
fzui/src/windows/ui/: uiButton.cpp  uiElement.cpp  uiImage.cpp  uiImageButton.cpp  uiLabel.cpp
fzui/src/windows/win32/: win32Utilites.cpp
primwalk/: CMakeLists.txt
primwalk/include/primwalk/: application.hpp  color.hpp  core.hpp  hitbox.hpp  mouse.hpp  mouseButtons.hpp  primwalk.hpp  window.hpp
primwalk/include/primwalk/components/: camera.hpp  component.hpp  componentArray.hpp  entity.hpp  renderable.hpp  tag.hpp  transform.hpp
primwalk/include/primwalk/data/: font.hpp  fontWeight.hpp  mesh.hpp  model.hpp  scene.hpp  shader.hpp
primwalk/include/primwalk/input/: input.hpp  keycode.hpp  rawInput.hpp
primwalk/include/primwalk/managers/: componentManager.hpp  entityManager.hpp  resourceManager.hpp  systemManager.hpp
primwalk/include/primwalk/math/: math.hpp  pwmath.hpp  vector2d.hpp
primwalk/include/primwalk/rendering/: buffer.hpp  descriptors.hpp  frameInfo.hpp  framebuffer.hpp  graphicsAPI.hpp  graphicsDevice.hpp  graphicsDevice_Vulkan.hpp  graphicsPipeline.hpp  image.hpp  renderer.hpp  renderpass.hpp  texture2D.hpp  vertex.hpp  vertex3d.hpp
primwalk/include/primwalk/systems/: renderSystem3d.hpp  system.hpp
primwalk/include/primwalk/ui/: GUI.hpp  menuWidget.hpp  messageHandler.hpp  mouseCursor.hpp  subView.hpp  uiButton.hpp  uiContainer.hpp  uiElement.hpp  uiEvent.hpp  uiIconButton.hpp  uiImage.hpp  uiLabel.hpp  uiListBox.hpp  uiPanel.hpp  uiSlider.hpp  uiTextField.hpp
primwalk/src/: primwalk.hpp  window.hpp
primwalk/src/common/: application.cpp  application.hpp  color.cpp  color.hpp  mouse.cpp  shader.cpp
primwalk/src/common/components/: camera.cpp  camera.hpp  component.cpp  component.hpp  componentArray.hpp  directionLight.hpp  entity.cpp  entity.hpp  pointLight.hpp  renderable.hpp  tag.hpp  transform.hpp
primwalk/src/common/data/: font.cpp  font.hpp  fontWeight.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  scene.cpp  shader.cpp  shader.hpp
primwalk/src/common/input/: input.cpp  input.hpp  keycode.hpp  mouseButtons.hpp  rawInput.cpp  rawInput.hpp
primwalk/src/common/managers/: componentManager.cpp  componentManager.hpp  entityManager.cpp  entityManager.hpp  resourceManager.cpp  resourceManager.hpp  systemManager.cpp  systemManager.hpp
primwalk/src/common/math/: hitbox.cpp  hitbox.hpp  math.cpp  pwmath.cpp  pwmath.hpp
primwalk/src/common/rendering/: buffer.cpp  buffer.hpp  deferredPass.cpp  deferredPass.hpp  descriptors.cpp  descriptors.hpp  frameInfo.hpp  framebuffer.cpp  framebuffer.hpp  graphicsDevice.cpp  graphicsDevice.hpp  graphicsDevice_Vulkan.cpp  graphicsDevice_Vulkan.hpp  graphicsPipeline.cpp  image.cpp  (+14 more)
primwalk/src/macos/: window_osx.hpp  window_osx.mm
primwalk/src/windows/: resource.hpp  resources.rc  window_win32.cpp  window_win32.hpp
(+172 files in other folders)
